assets/css/app.css
/* ... */
 .header-logo span {
    color: rgb(0, 0, 0);
     font-family: Circular, "Helvetica Neue", sans-serif;
     font-weight: 300;
     transform: translate(-80px);
     font-size: 24px !important;
     letter-spacing: -0.02em !important;
     line-height: 24px !important;
}
 @media only screen and (max-width: 1279px) {

    section.container {
        flex-direction: column;
         height: auto;
         overflow-x: hidden;
    }

    section.container .content {
        flex-direction: column;
         height: auto;
         width: 100%;
    }

    section.container .content .brand {
        flex-direction: column;
    }

    section.container .content .brand .left {
        height: 100vh;
    }

    section.container .content .brand .copy {
        height: 100%;
         margin-left: 0px;
         margin-top: 50vh;
         padding: 50px;
         width: 100%;
    }

    section.container .content .thirds {
        height: 80vh;
         padding: 50px;
         width: 100%;
    }

    section.container .content .page {
        height: 100vh;
         width: 100%;
    }

    header .header-logo {
        margin-left: 20px;
         margin-top: 10px;
    }

    header .header-hamburger {
        margin-right: 20px;
         margin-top: 10px;
    }

    header .trigger {
        backdrop-filter: blur(30px);
         background: rgba(255, 255, 255, 0.75);
         display: flex;
         height: 64px;
         opacity: 0;
         pointer-events: none;
         width: 100%;
    }

    header nav {
        padding: 60px;
    }

    header nav ul.main li.item {
        width: 300px;
    }

    .header-logo {
        gap: 6px;
    }

    .header-logo video {
        height: 44px;
         width: 44px;
    }

    .header-logo span {
        font-size: 20px !important;
         transform: translateX(-50px);
    }

    .header-logo.white span {
        color: rgb(0, 0, 0);
    }

    .header-hamburger .container {
        height: 44px;
         width: 44px;
    }

    .mouse-wheel {
        display: none;
    }

    section.introduction .video .play-pause .icon-play-pause {
        bottom: 20px;
    }

    section.aston-martin .content .page.page-4 {
        height: auto;
         padding-bottom: 60px;
         padding-top: 60px;
    }

    section.aston-martin .content .page.page-4 .carousel {
        padding-left: 50px;
         padding-right: 50px;
    }

    .mimicmo .content .page.page-3 {
        height: auto;
    }

    .carousel {
        gap: 0px;
         height: auto;
         justify-content: space-between;
         padding: 60px;
    }

    .carousel .column {
        flex-shrink: 1;
         height: auto;
         padding-bottom: 0px;
         padding-top: 0px;
    }

    .carousel .column .item .video, .carousel .column .item img, .carousel .column .item video, .carousel .column .item.shared-video .video, .carousel .column .item.shared-video img, .carousel .column .item.shared-video video {
        height: auto;
         width: 25vw;
    }

    .mentorcam .content .page.page-4 {
        height: auto;
    }

    .lamborghini .content .page.page-4 {
        height: auto;
         padding-bottom: 60px;
         padding-top: 60px;
    }

    .lamborghini .content .page.page-4 .carousel {
        padding-left: 50px;
         padding-right: 50px;
    }

    section.container.professional .content {
        height: auto;
    }

    section.container.professional .content .thirds.startups {
        left: 0px;
         position: relative;
         visibility: visible;
    }

    section.container.professional .content .page.video {
        height: 100vh;
         left: 0px;
         position: relative;
         width: 100%;
    }

    .header-logo span {
        font-size: 20px !important;
         transform: translate(-50px);
    }
}
 .header-logo.visible span {
    transform: translate(0px);
}
 section.introduction .video .play-pause .icon-play-pause {
    bottom: 8vh;
     left: 50%;
     position: absolute;
     transform: translate(-50%);
     z-index: 10;
}
 html {
    scroll-behavior: smooth;
}
 @media only screen and (min-width: 1280px) {
    section.aston-martin .content .page.page-4 .carousel, .lamborghini .content .page.page-4 .carousel {
        align-self: flex-start;
         height: auto;
         justify-content: flex-start;
    }
    section.slide.brands .wrapper {
        height: 100%;
         justify-content: center;
    }
}
/* ... */

